manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okk-deployment
  labels:
    app: okk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: okk
  template:
    metadata:
      labels:
        app: okk
    spec:
      containers:
        - name: okk-container
          image: lunix007/user-okk-deployed:b8ccb0fc0b4a01e3f1599cecbd3fa766a15fe053
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
