manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okk-service
  labels:
    app: okk
spec:
  selector:
    app: okk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
