manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okk-ingress
  namespace: okk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 172.171.186.132 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okk-service
            port:
              number: 80
